# active-messages

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  active_communicator.hpp  active_message.hpp  buffer.hpp  main.cpp  main.hpp
